--- a/css/zhekou.css
+++ b/css/zhekou.css
@@ -5,6 +5,11 @@
     width: 100%;
     line-height: 50px;
 }
+.sub-nav.fix-top {
+    position: fixed;
+    top: 0;
+    z-index: 99;
+}
 .sub-nav ul {
     width: 1200px;
     margin: 0 auto;
